--- a/start-mydealz-remote.html
+++ b/start-mydealz-remote.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h3>Command line:</h3>
-    <a id="run" href="ui.vision.html?direct=1&savelog=log.txt&macro=mydealz-remote.json">Click here</a>
+    <a id="run" href="https://raw.githubusercontent.com/ahelfert/misc/main/ui.vision.html?direct=1&savelog=log.txt&macro=https://raw.githubusercontent.com/ahelfert/misc/main/mydealz-remote.json">Click here</a>
     <br>
     <br>
 	<!-- To start another macro just edit this HTML file and change the macro name in the command line above^. -->
